<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_layout"
                android:textSize="48sp" />

            <EditText
                android:id="@+id/etUsernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etFirstNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/first_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etLastNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/last_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPhoneNumberRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etDateOfBirthRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:textSize="20sp"
                android:focusableInTouchMode="false"/>

            <Spinner
                android:id="@+id/spGenderRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:entries="@array/gender_array" />

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPassword2Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/user_password2"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRegisterSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>