<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/employee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:text="@string/name_employee_visit_show"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_service_visit_show"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/visit_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_visit_show"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/visit_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_visit"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Edit_visit_button" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete_visit_button" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>