<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateClientFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editing_profile"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/etFirstNameUpdateClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingBottom="8dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etLastNameUpdateClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etEmailUpdateClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPhoneNumberUpdateClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etDateOfBirthUpdateClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spGenderUpdateClient"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:entries="@array/gender_array"
                android:prompt="@string/gender" />

            <Button
                android:id="@+id/btnSaveUpdateClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Save_button" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>