<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEmployeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_employee"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmployeePosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/position_employee"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvEmployeePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/phone_number"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvEmployeeHalls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/halls_name_employee"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvEmployeeServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/service_name_employee"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>