<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateVisitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_visit"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Choose_service"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spServiceUpdateVisit"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Choose_employee"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spEmployeeUpdateVisit"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <EditText
            android:id="@+id/etSelectDateUpdateVisit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Choose_date"
            android:inputType="date"
            android:autofillHints=""
            android:focusableInTouchMode="false"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Choose_time"
            android:textSize="44sp" />

        <Spinner
            android:id="@+id/spTimeUpdateVisit"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Edit_visit_button" />


    </LinearLayout>

</FrameLayout>