<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvHallName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_hall"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHallDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/description_hall"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvHallCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/capacity"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvHallLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvHallWorkingHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/time_work"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>