<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvServiceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_service"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvServiceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/description_service"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvServicePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/price_service"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvServiceDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/duration_service"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>